--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>spring-rabbit</artifactId>
 			<version>3.1.6</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.module</groupId>
+			<artifactId>jackson-module-kotlin</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
